# fda-ai

./: .gitignore  README.md  out.txt  pyproject.toml
graphlit/: pyproject.toml
graphlit/src/: __main__.py  chat.py  client.py  ingest.py
rag_testing/: __main__.py  load.py  query.py
simple/: out.txt  pyproject.toml
simple/rag_testing/: __main__.py  load.py  query.py
